--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,14 @@
   "newProjectRoot": "projects",
   "projects": {
     "angular-i18-translate": {
+      "i18n": {
+        "sourceLocale":"en-US",
+        "locales": {
+          "fr": {"translation": "src/locales/messages.fr.json","baseHref": "/fr/"},
+          "de": {"translation":"src/locales/messages.de.json","baseHref": "/de/"},
+          "hi":{"translation":"src/locales/messages.hi.json","baseHref": "/hi/"}
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -18,6 +26,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/angular-i18-translate",
+            "localize":true,
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -30,9 +39,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -57,6 +70,15 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "fr":{
+              "localize":["fr"]
+            },
+            "hi":{
+              "localize":["hi"]
+            },
+            "de":{
+              "localize":["de"]
             }
           },
           "defaultConfiguration": "production"
@@ -69,6 +91,15 @@
             },
             "development": {
               "browserTarget": "angular-i18-translate:build:development"
+            },
+            "fr":{
+              "browserTarget": "angular-i18-translate:build:development,fr"
+            },
+            "de":{
+              "browserTarget": "angular-i18-translate:build:development,de"
+            },
+            "hi":{
+              "browserTarget": "angular-i18-translate:build:development,hi"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +107,9 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-i18-translate:build"
+            "browserTarget": "angular-i18-translate:build",
+            "format": "json",
+            "outputPath": "src/locales"
           }
         },
         "test": {
